--- a/OBA_Webapp_Upgrade/src/main/webapp/WEB-INF/content/sms/command-bookmarks.jspx
+++ b/OBA_Webapp_Upgrade/src/main/webapp/WEB-INF/content/sms/command-bookmarks.jspx
@@ -21,29 +21,19 @@
 	xmlns:oba="/oba-tags">
 <jsp:directive.page contentType="text/html" />
 <head>
-<title>Supported Transit Agencies</title>
-<script type="text/javascript" src="${oba:url('/config.action')}"><jsp:text></jsp:text></script>
-<script type="text/javascript" src="${oba:resource('CommonResources')}"><jsp:text></jsp:text></script>
+<title>Bookmarks</title>
 </head>
 <body>
-
-<div id="container">
-<div class="panel">
-
-<div class="section"><oba:message key="agencies.ScheduleAndRealtimeProvidedWithPermission"/></div>
-
-<div class="section">
-	<s:iterator value="model">
-	  <div>
-        <s:a href="%{agency.url}" cssStyle="font-weight: bold">
-		  <s:property value="agency.name" />
-		</s:a>
-      </div>
+<s:if test="bookmarks.empty">
+	<p>You have no bookmarks set.</p>
+</s:if>
+<s:else>
+	<s:iterator value="bookmarks" status="status">
+		<div><s:property value="#status.count" />: <s:property
+			value="getBookmarkName(top)" /></div>
 	</s:iterator>
-</div>
-
-</div>
-</div>
+	<p>Text "onebus #bookmark num" to see bookmark.</p>
+</s:else>
 
 </body>
 </html>
