--- a/OBA_Webapp_Upgrade/src/main/webapp/WEB-INF/content/sms/stop-by-number-multipleStopsFound.jspx
+++ b/OBA_Webapp_Upgrade/src/main/webapp/WEB-INF/content/sms/stop-by-number-multipleStopsFound.jspx
@@ -21,29 +21,14 @@
 	xmlns:oba="/oba-tags">
 <jsp:directive.page contentType="text/html" />
 <head>
-<title>Supported Transit Agencies</title>
-<script type="text/javascript" src="${oba:url('/config.action')}"><jsp:text></jsp:text></script>
-<script type="text/javascript" src="${oba:resource('CommonResources')}"><jsp:text></jsp:text></script>
+<title>No stops found</title>
 </head>
 <body>
 
-<div id="container">
-<div class="panel">
-
-<div class="section"><oba:message key="agencies.ScheduleAndRealtimeProvidedWithPermission"/></div>
-
-<div class="section">
-	<s:iterator value="model">
-	  <div>
-        <s:a href="%{agency.url}" cssStyle="font-weight: bold">
-		  <s:property value="agency.name" />
-		</s:a>
-      </div>
-	</s:iterator>
-</div>
-
-</div>
-</div>
-
+<div>Multiple stops found:</div>
+<s:iterator value="stops" status="status">
+	<div><s:property value="#status.index + 1"/>: <s:property value="name"/></div>
+</s:iterator>
+<div>0: cancel and reset</div>
 </body>
 </html>
