--- a/OBA_Webapp_Upgrade/src/main/webapp/WEB-INF/content/sms/exception-invalidArgument.jspx
+++ b/OBA_Webapp_Upgrade/src/main/webapp/WEB-INF/content/sms/exception-invalidArgument.jspx
@@ -16,31 +16,27 @@
     limitations under the License.
 
 -->
-<html xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:s="/struts-tags"
-	xmlns:oba="/oba-tags">
+<html xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:s="/struts-tags">
 <jsp:directive.page contentType="text/html" />
 <head>
-<title>Supported Transit Agencies</title>
-<script type="text/javascript" src="${oba:url('/config.action')}"><jsp:text></jsp:text></script>
-<script type="text/javascript" src="${oba:resource('CommonResources')}"><jsp:text></jsp:text></script>
 </head>
 <body>
 
-<div id="container">
+<div id="content">
 <div class="panel">
 
-<div class="section"><oba:message key="agencies.ScheduleAndRealtimeProvidedWithPermission"/></div>
+<s:push value="exception">
 
-<div class="section">
-	<s:iterator value="model">
-	  <div>
-        <s:a href="%{agency.url}" cssStyle="font-weight: bold">
-		  <s:property value="agency.name" />
-		</s:a>
-      </div>
-	</s:iterator>
-</div>
+  <s:if test="fieldName == 'entityId'">
+    <h3 class="warning">We couldn't parse that id.</h3>
+  </s:if>
+  <s:else>
+    <h3 class="warning">Something went wrong:</h3>
+    <div>fieldName=<s:property value="fieldName"/></div>
+    <div>errorMessage=<s:property value="errorMessage"/></div>
+  </s:else>
+
+</s:push>
 
 </div>
 </div>
