--- a/OBA_Webapp_Upgrade/src/main/webapp/WEB-INF/content/snippets/wrapper-header-standard.jspx
+++ b/OBA_Webapp_Upgrade/src/main/webapp/WEB-INF/content/snippets/wrapper-header-standard.jspx
@@ -60,23 +60,9 @@
 
 <jsp:element name="li">
   <jsp:attribute name="class">
-    <s:if test="#uri.startsWith(#contextPath + '/p/Research')">current</s:if>
-  </jsp:attribute>
-  <a href="${pageContext.request.contextPath}/p/Research.action">Research</a>
-</jsp:element>
-
-<jsp:element name="li">
-  <jsp:attribute name="class">
     <s:if test="#uri.startsWith(#contextPath + '/p/ContactUs')">current</s:if>
   </jsp:attribute>
   <a href="${pageContext.request.contextPath}/p/ContactUs.action">Contact Us</a>
-</jsp:element>
-
-<jsp:element name="li">
-  <jsp:attribute name="class">
-    <s:if test="#uri.startsWith(#contextPath + '/user')">current</s:if>
-  </jsp:attribute>
-  <a href="${pageContext.request.contextPath}/user/index.action">Settings</a>
 </jsp:element>
 
 </ul>
@@ -97,14 +83,14 @@
 </div>
 
 <!-- Google Analytics -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-2423527-7");
-pageTracker._initData();
-pageTracker._trackPageview();
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function()
+{ (i[r].q=i[r].q||[]).push(arguments)}
+,i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-42219744-1', '');
+ga('send', 'pageview');
 </script>
 
 </body>
